# ai-hedge-fund

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  .repomixignore  AGENTS.md  GEMINI.md  README.md  repomix.config.json
.archive/: dashboard-full-execution-blueprint.md
Randomness and Inefficiencies Detector/: .gitignore  Detecting Randomness and Inefficiencies in Deriv Volatility 75 Index 1‑Minute OHLC Data.md  README.md  pyproject.toml  sitecustomize.py
Randomness and Inefficiencies Detector/artifacts/manual-runs/2026/03/13/rid-20260313-132223-v75_regime_spike-d1293555/: findings.json  manifest.json  metrics.json  report.md
Randomness and Inefficiencies Detector/config/: default.yaml  local.example.yaml
Randomness and Inefficiencies Detector/docs/: methodology.md
Randomness and Inefficiencies Detector/docs/planning/: README.md  v75-strategy-research-prd.md  v75-strategy-research-roadmap.md
Randomness and Inefficiencies Detector/src/rid/: __init__.py  cli.py  config.py  data_audit.py  dataset.py  directional_tests.py  eda.py  progress.py  regimes.py  reporting.py  run_manifest.py  stats_helpers.py  tradability.py  validation.py  volatility_tests.py
Randomness and Inefficiencies Detector/tests/: conftest.py  test_cli_smoke.py  test_isolation.py  test_regimes.py  test_reporting.py  test_validation.py
Randomness and Inefficiencies Detector/tests/fixtures/: README.md  v75_mini_gapped.csv  v75_mini_invalid.csv  v75_mini_valid.csv  v75_regime_range.csv  v75_regime_sparse.csv  v75_regime_spike.csv  v75_regime_trend.csv
scripts/: migrate_db.py  (+4 more)
(+361 files in other folders)
